--- a/fund-leaders/index.mdx
+++ b/fund-leaders/index.mdx
@@ -1,48 +1,101 @@
 ---
 title: "Executive Overview"
-description: "Discover how Amos transforms fund operations with data-driven insights and operational excellence"
+description: "Transform your fund operations with Amos - the open, auditable data platform that delivers operational excellence while ensuring control and AI readiness"
 ---
 
 # Executive Overview
 
-Welcome to Amos - the comprehensive data platform designed specifically for fund leaders who demand operational excellence and strategic insights.
+Welcome to Amos - the comprehensive data platform designed specifically for fund leaders who demand operational excellence, strategic control, and future-ready capabilities. Amos transforms fund operations through our proven **"Adapt → Align → Upgrade"** methodology while maintaining complete transparency and eliminating vendor lock-in.
 
-## Key Value Propositions
+## Transformational Value Propositions
 
 <CardGroup cols={2}>
-  <Card title="Operational Efficiency" icon="chart-line">
-    Reduce reporting time by 75% and eliminate manual data reconciliation
+  <Card title="Operational Excellence" icon="chart-line">
+    **75% faster reporting** with automated workflows that adapt to your current processes, then upgrade operations systematically
   </Card>
-  <Card title="Strategic Insights" icon="lightbulb">
-    Make data-driven investment decisions with real-time portfolio analytics
+  <Card title="Strategic Control" icon="shield-check">
+    **Complete transparency** with open source components, self-hosting options, and full audit trails - no vendor lock-in
   </Card>
-  <Card title="Risk Management" icon="shield-check">
-    Enhance compliance and reduce operational risk through automated workflows
+  <Card title="AI-Ready Foundation" icon="brain">
+    **Unified data platform** that enables credible AI initiatives with proper governance and human-in-the-loop patterns
   </Card>
-  <Card title="Investor Relations" icon="handshake">
-    Deliver professional, timely reports that strengthen investor confidence
+  <Card title="Risk Mitigation" icon="lock">
+    **Enhanced compliance** through version-controlled configs, end-to-end lineage, and SOC 2/ISO 27001 alignment
   </Card>
 </CardGroup>
 
-## Why Fund Leaders Choose Amos
+## Quantifiable Business Impact
 
-Amos addresses the critical challenges facing modern fund operations:
+<CardGroup cols={3}>
+  <Card title="75% Time Savings" icon="clock">
+    Monthly reporting cycles reduced from weeks to days
+  </Card>
+  <Card title="90% Data Accuracy" icon="check-circle">
+    Eliminate manual errors through automated reconciliation
+  </Card>
+  <Card title="50% Cost Reduction" icon="dollar-sign">
+    Lower operational costs while maintaining full control
+  </Card>
+</CardGroup>
 
-- **Data Silos**: Consolidate information from multiple systems into a unified view
-- **Manual Processes**: Automate repetitive tasks and reduce human error
-- **Reporting Delays**: Generate real-time insights and accelerate decision-making
-- **Compliance Burden**: Streamline regulatory reporting and audit preparation
+## The Amos Advantage: Open, Controlled, Future-Ready
 
-## Next Steps
+### Why Fund Leaders Choose Amos
 
-<Card title="Explore Business Value" icon="arrow-right" href="/fund-leaders/business-value">
-  Learn about ROI frameworks and quantifiable benefits
-</Card>
+Amos addresses the critical challenges facing modern fund operations while ensuring you maintain control:
 
-<Card title="View Use Cases" icon="arrow-right" href="/fund-leaders/use-cases">
-  See how Amos transforms operations for different fund types
-</Card>
+- **Data Silos → Unified Platform**: Consolidate information from multiple systems with open connectors you can audit and extend
+- **Manual Processes → Intelligent Automation**: Automate workflows that adapt to your processes, then systematically upgrade operations  
+- **Vendor Lock-in → Strategic Control**: Self-host with standard tooling, retain data custody, and maintain reversible deployment
+- **AI Blockers → AI Enablement**: Build the unified, governed data foundation essential for credible AI initiatives
+- **Compliance Risk → Audit Readiness**: Version-controlled configurations, complete lineage, and evidence packs for regulatory requirements
 
-<Card title="Getting Started" icon="arrow-right" href="/fund-leaders/implementation">
-  Understand implementation timelines and requirements
-</Card>
+## The "Adapt → Align → Upgrade" Methodology
+
+Amos transforms your operations through a proven three-phase approach:
+
+1. **Adapt**: Amos first adapts to your current processes and systems, minimizing disruption
+2. **Align**: Stakeholders align on unified data definitions and standardized workflows  
+3. **Upgrade**: Systematically upgrade operations with advanced analytics, automation, and AI capabilities
+
+This methodology ensures successful transformation while maintaining operational continuity and stakeholder buy-in.
+
+## Open Source Assurance & Strategic Control
+
+<CardGroup cols={2}>
+  <Card title="No Vendor Lock-in" icon="unlock">
+    Self-host with standard tooling, retain complete data custody, and maintain reversible deployment options
+  </Card>
+  <Card title="Full Auditability" icon="search">
+    Version-controlled configurations, end-to-end lineage, and comprehensive audit trails for regulatory compliance
+  </Card>
+</CardGroup>
+
+## AI Readiness & Future Enablement
+
+Transform your data foundation to enable credible AI initiatives:
+- **L0 → L3 Progression**: Move from fragmented data to governed feature stores ready for AI
+- **Priority Use Cases**: Operations automation, finance/IR optimization, and investment decision support
+- **Proper Governance**: PII handling, policy enforcement, and human-in-the-loop patterns
+
+## Next Steps for Fund Leaders
+
+<CardGroup cols={2}>
+  <Card title="Business Value & ROI" icon="chart-bar" href="/fund-leaders/business-value">
+    Explore detailed ROI frameworks, cost-benefit analysis, and strategic positioning advantages
+  </Card>
+  <Card title="Use Cases by Fund Type" icon="building" href="/fund-leaders/use-cases">
+    See specific scenarios for PE, VC, hedge funds with change, open, and AI perspectives
+  </Card>
+  <Card title="Change Management" icon="users" href="/fund-leaders/implementation/change-management">
+    Understand the organizational transformation approach and stakeholder alignment strategies
+  </Card>
+  <Card title="Open Source Assurance" icon="code" href="/fund-leaders/integration">
+    Learn about vendor lock-in prevention, auditability, and governance frameworks
+  </Card>
+</CardGroup>
+
+<Note>
+**Ready to Transform Your Operations?** 
+Contact our team for a customized assessment of your fund's transformation potential and AI readiness evaluation.
+</Note>
